fix dropboard z-index in dialog

--- a/resources/installer/css/main.css
+++ b/resources/installer/css/main.css
@@ -185,7 +185,7 @@ input {
     left:0;
     bottom:0;
     right:0;
-    z-index:200;
+    z-index:250;
     background:rgba(255,255,255,0.1);
     display:none;
 }
